--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
