--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "root": true,
   "ignorePatterns": ["dist"],
   "rules": {
+    "@typescript-eslint/no-floating-promises": 2,
     "@typescript-eslint/consistent-type-imports": [
       2,
       { "fixStyle": "separate-type-imports" }
