--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jsdom": "^23.2.0",
     "prettier": "^3.2.1",
+    "ts-prune": "^0.10.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.2.0"
